--- a/app/app.global.css
+++ b/app/app.global.css
@@ -4,7 +4,11 @@ body {
   position: relative;
   color: white;
   height: 100vh;
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
+  font-family: 'roboto', Arial, Helvetica, Helvetica Neue, serif;
   overflow-y: hidden;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'roboto';
 }
 
