--- a/app/components/Module1/index.css
+++ b/app/components/Module1/index.css
@@ -2,3 +2,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.canvasWrap {
+  height: 100%;
+  width: 100%;
+}
+
+#canvas {
+  height: 100%;
+  width: 100%;
+}
